[project]
name = "chuqin"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
]

[project.urls]
Homepage = "https://github.com/hezhangjian/ChuQin-NiceGUI"
Repository = "https://github.com/hezhangjian/ChuQin-NiceGUI"
Documentation = "https://github.com/hezhangjian/ChuQin-NiceGUI#readme"

[tool.mypy]
python_version = "3.9"

[tool.ruff]
line-length = 120
